library/src/libqabstractitemmodel.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractListModel QAbstractListModel;
typedef struct QAbstractTableModel QAbstractTableModel;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QObject QObject;
typedef struct QPersistentModelIndex QPersistentModelIndex;
QTLIBC_API bool QAbstractItemModel_InsertRow2(QAbstractItemModel* self, int row, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_InsertColumn2(QAbstractItemModel* self, int column, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_RemoveRow2(QAbstractItemModel* self, int row, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_RemoveColumn2(QAbstractItemModel* self, int column, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_CheckIndex2(const QAbstractItemModel* self, QModelIndex* index, int options);
QTLIBC_API void QAbstractItemModel_DataChanged3(QAbstractItemModel* self, QModelIndex* topLeft, QModelIndex* bottomRight, libqt_list /* of int */ roles);
QTLIBC_API void QAbstractItemModel_LayoutChanged1(QAbstractItemModel* self, libqt_list /* of QPersistentModelIndex* */ parents);
QTLIBC_API void QAbstractItemModel_LayoutChanged2(QAbstractItemModel* self, libqt_list /* of QPersistentModelIndex* */ parents, int hint);
QTLIBC_API void QAbstractItemModel_LayoutAboutToBeChanged1(QAbstractItemModel* self, libqt_list /* of QPersistentModelIndex* */ parents);
QTLIBC_API void QAbstractItemModel_LayoutAboutToBeChanged2(QAbstractItemModel* self, libqt_list /* of QPersistentModelIndex* */ parents, int hint);
QTLIBC_API QModelIndex* QAbstractItemModel_CreateIndex3(const QAbstractItemModel* self, int row, int column, const void* data);
QTLIBC_API QAbstractTableModel* QAbstractTableModel_new();
QTLIBC_API QAbstractTableModel* QAbstractTableModel_new2(QObject* parent);
QTLIBC_API QMetaObject* QAbstractTableModel_MetaObject(const QAbstractTableModel* self);
QTLIBC_API void* QAbstractTableModel_Metacast(QAbstractTableModel* self, const char* param1);
QTLIBC_API int QAbstractTableModel_Metacall(QAbstractTableModel* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QAbstractTableModel_Tr(const char* s);
QTLIBC_API QModelIndex* QAbstractTableModel_Index(const QAbstractTableModel* self, int row, int column, QModelIndex* parent);
QTLIBC_API QModelIndex* QAbstractTableModel_Sibling(const QAbstractTableModel* self, int row, int column, QModelIndex* idx);
QTLIBC_API bool QAbstractTableModel_DropMimeData(QAbstractTableModel* self, QMimeData* data, int action, int row, int column, QModelIndex* parent);
QTLIBC_API int QAbstractTableModel_Flags(const QAbstractTableModel* self, QModelIndex* index);
QTLIBC_API libqt_string QAbstractTableModel_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QAbstractTableModel_Tr3(const char* s, const char* c, int n);
QTLIBC_API QAbstractListModel* QAbstractListModel_new();
QTLIBC_API QAbstractListModel* QAbstractListModel_new2(QObject* parent);
QTLIBC_API QMetaObject* QAbstractListModel_MetaObject(const QAbstractListModel* self);
QTLIBC_API void* QAbstractListModel_Metacast(QAbstractListModel* self, const char* param1);
QTLIBC_API int QAbstractListModel_Metacall(QAbstractListModel* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QAbstractListModel_Tr(const char* s);
QTLIBC_API QModelIndex* QAbstractListModel_Index(const QAbstractListModel* self, int row, int column, QModelIndex* parent);
QTLIBC_API QModelIndex* QAbstractListModel_Sibling(const QAbstractListModel* self, int row, int column, QModelIndex* idx);
QTLIBC_API bool QAbstractListModel_DropMimeData(QAbstractListModel* self, QMimeData* data, int action, int row, int column, QModelIndex* parent);
QTLIBC_API int QAbstractListModel_Flags(const QAbstractListModel* self, QModelIndex* index);
QTLIBC_API libqt_string QAbstractListModel_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QAbstractListModel_Tr3(const char* s, const char* c, int n);