src/libqabstractitemmodel.bf

	[LinkName("QAbstractItemModel_InsertRow2")]
	public static extern bool QAbstractItemModel_InsertRow2(void* c_this, int32 row, QModelIndex parent);
	[LinkName("QAbstractItemModel_InsertColumn2")]
	public static extern bool QAbstractItemModel_InsertColumn2(void* c_this, int32 column, QModelIndex parent);
	[LinkName("QAbstractItemModel_RemoveRow2")]
	public static extern bool QAbstractItemModel_RemoveRow2(void* c_this, int32 row, QModelIndex parent);
	[LinkName("QAbstractItemModel_RemoveColumn2")]
	public static extern bool QAbstractItemModel_RemoveColumn2(void* c_this, int32 column, QModelIndex parent);
	[LinkName("QAbstractItemModel_CheckIndex2")]
	public static extern bool QAbstractItemModel_CheckIndex2(void* c_this, QModelIndex index, int64 options);
	[LinkName("QAbstractItemModel_DataChanged3")]
	public static extern void QAbstractItemModel_DataChanged3(void* c_this, QModelIndex topLeft, QModelIndex bottomRight, int32[] roles);
	[LinkName("QAbstractItemModel_LayoutChanged1")]
	public static extern void QAbstractItemModel_LayoutChanged1(void* c_this, QPersistentModelIndex[] parents);
	[LinkName("QAbstractItemModel_LayoutChanged2")]
	public static extern void QAbstractItemModel_LayoutChanged2(void* c_this, QPersistentModelIndex[] parents, int64 hint);
	[LinkName("QAbstractItemModel_LayoutAboutToBeChanged1")]
	public static extern void QAbstractItemModel_LayoutAboutToBeChanged1(void* c_this, QPersistentModelIndex[] parents);
	[LinkName("QAbstractItemModel_LayoutAboutToBeChanged2")]
	public static extern void QAbstractItemModel_LayoutAboutToBeChanged2(void* c_this, QPersistentModelIndex[] parents, int64 hint);
	[LinkName("QAbstractItemModel_CreateIndex3")]
	public static extern QModelIndex QAbstractItemModel_CreateIndex3(void* c_this, int32 row, int32 column, void data);
}
public struct QAbstractTableModel
{
	[LinkName("QAbstractTableModel_new")]
	public static extern void* QAbstractTableModel_new();
	[LinkName("QAbstractTableModel_new2")]
	public static extern void* QAbstractTableModel_new2(QObject parent);
	[LinkName("QAbstractTableModel_MetaObject")]
	public static extern QMetaObject QAbstractTableModel_MetaObject(void* c_this);
	[LinkName("QAbstractTableModel_Metacast")]
	public static extern void QAbstractTableModel_Metacast(void* c_this, char8[] param1);
	[LinkName("QAbstractTableModel_Metacall")]
	public static extern int32 QAbstractTableModel_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QAbstractTableModel_Tr")]
	public static extern char8[] QAbstractTableModel_Tr(char8[] s);
	[LinkName("QAbstractTableModel_Index")]
	public static extern QModelIndex QAbstractTableModel_Index(void* c_this, int32 row, int32 column, QModelIndex parent);
	[LinkName("QAbstractTableModel_Sibling")]
	public static extern QModelIndex QAbstractTableModel_Sibling(void* c_this, int32 row, int32 column, QModelIndex idx);
	[LinkName("QAbstractTableModel_DropMimeData")]
	public static extern bool QAbstractTableModel_DropMimeData(void* c_this, QMimeData data, int64 action, int32 row, int32 column, QModelIndex parent);
	[LinkName("QAbstractTableModel_Flags")]
	public static extern int64 QAbstractTableModel_Flags(void* c_this, QModelIndex index);
	[LinkName("QAbstractTableModel_Tr2")]
	public static extern char8[] QAbstractTableModel_Tr2(char8[] s, char8[] c);
	[LinkName("QAbstractTableModel_Tr3")]
	public static extern char8[] QAbstractTableModel_Tr3(char8[] s, char8[] c, int32 n);
}
public struct QAbstractListModel
{
	[LinkName("QAbstractListModel_new")]
	public static extern void* QAbstractListModel_new();
	[LinkName("QAbstractListModel_new2")]
	public static extern void* QAbstractListModel_new2(QObject parent);
	[LinkName("QAbstractListModel_MetaObject")]
	public static extern QMetaObject QAbstractListModel_MetaObject(void* c_this);
	[LinkName("QAbstractListModel_Metacast")]
	public static extern void QAbstractListModel_Metacast(void* c_this, char8[] param1);
	[LinkName("QAbstractListModel_Metacall")]
	public static extern int32 QAbstractListModel_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QAbstractListModel_Tr")]
	public static extern char8[] QAbstractListModel_Tr(char8[] s);
	[LinkName("QAbstractListModel_Index")]
	public static extern QModelIndex QAbstractListModel_Index(void* c_this, int32 row, int32 column, QModelIndex parent);
	[LinkName("QAbstractListModel_Sibling")]
	public static extern QModelIndex QAbstractListModel_Sibling(void* c_this, int32 row, int32 column, QModelIndex idx);
	[LinkName("QAbstractListModel_DropMimeData")]
	public static extern bool QAbstractListModel_DropMimeData(void* c_this, QMimeData data, int64 action, int32 row, int32 column, QModelIndex parent);
	[LinkName("QAbstractListModel_Flags")]
	public static extern int64 QAbstractListModel_Flags(void* c_this, QModelIndex index);
	[LinkName("QAbstractListModel_Tr2")]
	public static extern char8[] QAbstractListModel_Tr2(char8[] s, char8[] c);
	[LinkName("QAbstractListModel_Tr3")]
	public static extern char8[] QAbstractListModel_Tr3(char8[] s, char8[] c, int32 n);
}